# telemetry-lab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: default.yaml  richer_sample.yaml
data/processed/: alerts.csv  features.csv  summary.json
data/raw/: richer_sample_events.jsonl  sample_events.jsonl
demos/ai-assisted-detection-demo/: README.md
demos/config-change-investigation-demo/: README.md
demos/rule-evaluation-and-dedup-demo/: README.md
docs/: ai-assisted-detection-design.md  ai-assisted-detection-examples.md  ai-assisted-detection-reviewer-pack.md  config-change-investigation-demo-design.md  config-change-investigation-reviewer-pack.md  design-notes.md  release-v0.4.0.md  roadmap.md  sample-output.md
docs/reviewer-pack-v0.4.0/: MANIFEST.md  accepted-summary-example.json  degraded-coverage-example.json  rejected-summary-example.json
docs/reviewer-pack-v0.6.0/: MANIFEST.md  benign-change-example.json  bounded-case-no-evidence-example.json  investigation-summary-example.json  risky-change-with-evidence-example.json
notebooks/: exploratory_demo.ipynb
src/telemetry_window_demo/: __init__.py  cli.py  features.py  io.py  preprocess.py  rules.py  schema.py  (+2 more)
tests/: test_ai_assisted_detection_demo.py  test_config_change_investigation_demo.py  test_edge_cases.py  test_io.py  test_pipeline_e2e.py  test_rule_evaluation_and_dedup_demo.py  test_rules.py  test_windowing.py
(+32 files in other folders)
